I AM TRYING TO BE COOL

--- a/new_index.html
+++ b/new_index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<style>
-body {
-  background-size: 40px 40px;
-  background-image:
-    linear-gradient(to right, grey 0.5px, transparent 0.002px),
-    linear-gradient(to bottom, grey 0.5px, transparent 0.002px);
-}
-</style>
+    <link rel="stylesheet" href="new-stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+
 </head>
+
 <body>
-    
-<h1 class = header>
-Hi I am Areena!
-</h1>
-    </body>
-    
+    <h1>
+        Areena Arora
+    </h1>
+    <h4>
+        I'm a data journalist. Check out my work here :)
+    </h4>
+    <br>
+    <div class="cards-wrapper">
+        <div class="story-card">
+            <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
+            <div class="story-card-container">
+                <h2><b>Where's India's best and cheapest Biryani?</b></h2>
+                <p></p>
+            </div>
+        </div>
+        <div class="story-card">
+            <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
+            <div class="story-card-container">
+                <h2><b>Where's India's best and cheapest Biryani?</b></h2>
+                <p></p>
+            </div>
+        </div>
+        <div class="story-card">
+            <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
+            <div class="story-card-container">
+                <h2><b>Where's India's best and cheapest Biryani?</b></h2>
+                <p></p>
+            </div>
+        </div>
+    </div>
+</body>
