CHANGED IT ENTIRELY SO

--- a/index.html
+++ b/index.html
@@ -88,33 +88,34 @@
         <h2><strong>Data visualization</strong></h2>
         <div class="columns is-multiline">
             <p>
-                <div class="column is-one-third">
-                    <a href='https://areenaarora.com/new-york-state-spills' target="_blank">
-                        <strong>Hazardous spills in New York over the last five years </a></strong>
-                    <br>
-                    👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Excel</span>
-                    <a href='https://ggplot2.tidyverse.org/reference/' target='_blank'><span class="tag is-success">ggplot2</span></a>
-                    <a href='https://pandas.pydata.org/' target='_blank'><span
-                        class="tag is-success">Pandas</span></a>
-                    <br>
-                    A data dive into hazardous material spill incidents in New York state in the last five years.<br>February 2022
-                </div>
-                </p>
+            <div class="column is-one-third">
+                <a href='https://areenaarora.com/new-york-state-spills' target="_blank">
+                    <strong>Hazardous spills in New York over the last five years </a></strong>
+                <br>
+                👩🏻‍💻: <span class="tag is-success">Python</span> <span class="tag is-success">Excel</span>
+                <a href='https://ggplot2.tidyverse.org/reference/' target='_blank'><span
+                        class="tag is-success">ggplot2</span></a>
+                <a href='https://pandas.pydata.org/' target='_blank'><span class="tag is-success">Pandas</span></a>
+                <br>
+                A data dive into hazardous material spill incidents in New York state in the last five
+                years.<br>February 2022
+            </div>
+            </p>
             <p>
-                <div class="column is-one-third">
-                    <a href='https://areenaarora.com/biryani-project' target="_blank">
-                        <strong> Where's India's best and cheapest Biryani?</a></strong>
-                    <br>
-                    👩🏻‍💻: <a href='https://pandas.pydata.org/' target='_blank'><span
-                            class="tag is-success">Pandas</span></a> <a
-                        href='https://www.crummy.com/software/BeautifulSoup/bs4/doc/' target='_blank'><span
-                            class="tag is-success">Beautiful Soup</span></a>
-                    <a href='https://www.selenium.dev' target='_blank'> <span class="tag is-success">Selenium</span></a>
-                    <br>
-                    Built a database of restaurants that deliver Biryani in six Indian cities for a quick and fun
-                    analysis.<br>February 2022
-                </div>
-                </p>
+            <div class="column is-one-third">
+                <a href='https://areenaarora.com/biryani-project' target="_blank">
+                    <strong> Where's India's best and cheapest Biryani?</a></strong>
+                <br>
+                👩🏻‍💻: <a href='https://pandas.pydata.org/' target='_blank'><span
+                        class="tag is-success">Pandas</span></a> <a
+                    href='https://www.crummy.com/software/BeautifulSoup/bs4/doc/' target='_blank'><span
+                        class="tag is-success">Beautiful Soup</span></a>
+                <a href='https://www.selenium.dev' target='_blank'> <span class="tag is-success">Selenium</span></a>
+                <br>
+                Built a database of restaurants that deliver Biryani in six Indian cities for a quick and fun
+                analysis.<br>February 2022
+            </div>
+            </p>
             <p>
             <div class="column is-one-third">
                 <a href='https://github.com/areenaarora/scraping-newsroom-style-guides' target="_blank">
@@ -218,7 +219,7 @@
                         <a href='https://www.idahopress.com/news/local/2cscoop/in-the-midst-of-an-immigration-stir-up-one-local-teen-is-ready-to-fight/article_97bde17b-604a-55e0-9dcf-bc946b688916.html'
                             target="_blank"><strong>In the midst of an immigration stir up, one local teen is ready to
                                 fight</a></strong><br>
-                       September 2017
+                        September 2017
                     </div>
                     <br>
                     <div class="column is-one-third">
