--- a/new_index.html
+++ b/new_index.html
@@ -7,38 +7,111 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <nav>
+        <a href="https://areenaarora.com">
+            <i class="fas fa-home fa-2x" aria-hidden="true"></i>
+        </a>
+        &nbsp;
+        <a href="https://areenaarora.com/resume">
+            <i class="fas fa-book fa-2x" aria-hidden="true"></i>
+        </a>
+    </nav>
     <h1>
         Areena Arora
     </h1>
     <h4>
-        I'm a data journalist. Check out my work here :)
+        I'm a <span class=blink>data journalist.</span> Here's some of my selected work! :)
     </h4>
-    <br>
+    <br><br>
+    <button>Data+Viz</button>
+    <br><br>
     <div class="cards-wrapper">
-        <div class="story-card">
-            <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
-            <div class="story-card-container">
-                <h2><b>Where's India's best and cheapest Biryani?</b></h2>
-                <p></p>
+        <a href="https://areenaarora.com/new-york-state-spills" target="_blank">
+            <div class="story-card">
+                <img src="oil-spill.jpg" alt="Oil spill" style="width:100%">
+                <div class="story-card-container">
+                    <h2>An analysis of hazardous material spill incidents in New York State over five years</h2>
+                    <p>February 2022</p>
+                </div>
             </div>
-        </div>
-        <div class="story-card">
-            <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
-            <div class="story-card-container">
-                <h2><b>Where's India's best and cheapest Biryani?</b></h2>
-                <p></p>
+        </a>
+        <a href="https://areenaarora.com/biryani-project" target="_blank">
+            <div class="story-card">
+                <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
+                <div class="story-card-container">
+                    <h2>Where's India's best and cheapest Biryani?</h2>
+                    <p>February 2022</p>
+                </div>
             </div>
-        </div>
-        <div class="story-card">
-            <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
-            <div class="story-card-container">
-                <h2><b>Where's India's best and cheapest Biryani?</b></h2>
-                <p></p>
+        </a>
+        <a href="https://github.com/areenaarora/scraping-newsroom-style-guides" target="_blank">
+            <div class="story-card">
+                <img src="editor.jpg" alt="editor image" style="width:100%">
+                <div class="story-card-container">
+                    <h2>Comparing different newsrooms' style</h2>
+                    <p>December 2021</p>
+                </div>
             </div>
-        </div>
+        </a>
+        <a href='https://github.com/areenaarora/areenaarora.com' target="_blank">
+            <div class="story-card">
+                <img src="idea.jpg" alt="idea" style="width:100%">
+                <div class="story-card-container">
+                    <h2>My digital playground — This website</h2>
+                    <p>ongoing</p>
+                </div>
+            </div>
+        </a>
+        <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
+            target="_blank">
+            <div class="story-card">
+                <img src="construction.jpg" alt="construction" style="width:100%">
+                <div class="story-card-container">
+                    <h2>Indian Creek Plaza — over budget and behind original construction schedule</h2>
+                    <p>October 2017</p>
+                </div>
+            </div>
+        </a>
+        <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html' target="_blank">
+            <div class="story-card">
+                <img src="christmas-tree.jpg" alt="Christmas Tree" style="width:100%">
+                <div class="story-card-container">
+                    <h2>National Christmas tree shortage drives up prices at Canyon County tree lots</h2>
+                    <p>November 2017</p>
+                </div>
+            </div>
+        </a>
+        <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
+            target="_blank">
+            <div class="story-card">
+                <img src="culvert.jpg" alt="Culvert" style="width:100%">
+                <div class="story-card-container">
+                    <h2>Culvert concerns: Culvert report reveals 11 other structures in deficient condition</h2>
+                    <p>December 2017</p>
+                </div>
+            </div>
+        </a>
+        <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html' target="_blank">
+            <div class="story-card">
+                <img src="crime.jpg" alt="Crime image" style="width:100%">
+                <div class="story-card-container">
+                    <h2>Prosecutor: Retired Boise priest found with child porn, drugs</h2>
+                    <p>February 2018</p>
+                </div>
+            </div>
+        </a>
+        <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank">
+            <div class="story-card">
+                <img src="RV.jpg" alt="RV" style="width:100%">
+                <div class="story-card-container">
+                    <h2>As housing inventory shrinks, people look to living in RVs</h2>
+                    <p>April 2018</p>
+                </div>
+            </div>
+        </a>
     </div>
 </body>
