Added social icons

--- a/new_index.html
+++ b/new_index.html
@@ -19,6 +19,12 @@
         <a href="https://areenaarora.com/resume">
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
         </a>
+        <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
+            <i class="fab fa-twitter fa-2x"></i>
+        </a>
+        <a href='https://github.com/areenaarora' target='blank' class="right-nav">
+            <i class="fab fa-github fa-2x"></i>
+        </a>
     </nav>
     <h1>
         Areena Arora
@@ -76,7 +82,8 @@
                 </div>
             </div>
         </a>
-        <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html' target="_blank">
+        <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html'
+            target="_blank">
             <div class="story-card">
                 <img src="christmas-tree.jpg" alt="Christmas Tree" style="width:100%">
                 <div class="story-card-container">
@@ -95,7 +102,8 @@
                 </div>
             </div>
         </a>
-        <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html' target="_blank">
+        <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
+            target="_blank">
             <div class="story-card">
                 <img src="crime.jpg" alt="Crime image" style="width:100%">
                 <div class="story-card-container">
