--- a/new_resume.html
+++ b/new_resume.html
@@ -8,7 +8,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
 </head>
-
+<title>About Me</title>
 <body>
     <nav>
         <a href="https://areenaarora.com">
