--- a/new_index.html
+++ b/new_index.html
@@ -38,7 +38,7 @@
     <div class="cards-wrapper">
         <a href="https://areenaarora.com/new-york-state-spills" target="_blank">
             <div class="story-card">
-                <img src="oil-spill.jpg" alt="Oil spill" style="width:100%">
+                <img src="card-photos/oil-spill.jpg" alt="Oil spill" style="width:100%">
                 <div class="story-card-container">
                     <h2>An analysis of hazardous material spill incidents in New York State over five years</h2>
                     <p>February 2022</p>
@@ -56,7 +56,7 @@
         </a>
         <a href="https://github.com/areenaarora/scraping-newsroom-style-guides" target="_blank">
             <div class="story-card">
-                <img src="editor.jpg" alt="editor image" style="width:100%">
+                <img src="card-photos/editor.jpg" alt="editor image" style="width:100%">
                 <div class="story-card-container">
                     <h2>Comparing different newsrooms' style</h2>
                     <p>December 2021</p>
@@ -65,7 +65,7 @@
         </a>
         <a href='https://github.com/areenaarora/areenaarora.com' target="_blank">
             <div class="story-card">
-                <img src="idea.jpg" alt="idea" style="width:100%">
+                <img src="card-photos/idea.jpg" alt="idea" style="width:100%">
                 <div class="story-card-container">
                     <h2>My digital playground — This website</h2>
                     <p>ongoing</p>
@@ -75,7 +75,7 @@
         <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
             target="_blank">
             <div class="story-card">
-                <img src="construction.jpg" alt="construction" style="width:100%">
+                <img src="card-photos/construction.jpg" alt="construction" style="width:100%">
                 <div class="story-card-container">
                     <h2>Indian Creek Plaza — over budget and behind original construction schedule</h2>
                     <p>October 2017</p>
@@ -85,7 +85,7 @@
         <a href='https://www.idahopress.com/news/local/2cscoop/national-christmas-tree-shortage-drives-up-prices-at-canyon-county-tree-lots/article_1844a843-db04-523e-8db0-17b1d204e7ca.html'
             target="_blank">
             <div class="story-card">
-                <img src="christmas-tree.jpg" alt="Christmas Tree" style="width:100%">
+                <img src="card-photos/christmas-tree.jpg" alt="Christmas Tree" style="width:100%">
                 <div class="story-card-container">
                     <h2>National Christmas tree shortage drives up prices at Canyon County tree lots</h2>
                     <p>November 2017</p>
@@ -95,7 +95,7 @@
         <a href='https://www.idahopress.com/news/local/2cscoop/at-columbia-high-in-nampa-300-students-walk-out-majority-do-not/article_8b759674-ace6-5b55-adcc-39071b629a11.html'
             target="_blank">
             <div class="story-card">
-                <img src="culvert.jpg" alt="Culvert" style="width:100%">
+                <img src="card-photos/culvert.jpg" alt="Culvert" style="width:100%">
                 <div class="story-card-container">
                     <h2>Culvert concerns: Culvert report reveals 11 other structures in deficient condition</h2>
                     <p>December 2017</p>
@@ -105,7 +105,7 @@
         <a href='https://www.idahopress.com/news/local/2cscoop/prosecutor-retired-boise-priest-found-with-child-porn-drugs/article_403079a5-4491-57f3-8a9e-9e91e3de8651.html'
             target="_blank">
             <div class="story-card">
-                <img src="crime.jpg" alt="Crime image" style="width:100%">
+                <img src="card-photos/crime.jpg" alt="Crime image" style="width:100%">
                 <div class="story-card-container">
                     <h2>Prosecutor: Retired Boise priest found with child porn, drugs</h2>
                     <p>February 2018</p>
@@ -114,7 +114,7 @@
         </a>
         <a href='https://apnews.com/article/10ab9cb7a5e24bdd86337d36a48c539b' target="_blank">
             <div class="story-card">
-                <img src="RV.jpg" alt="RV" style="width:100%">
+                <img src="card-photos/RV.jpg" alt="RV" style="width:100%">
                 <div class="story-card-container">
                     <h2>As housing inventory shrinks, people look to living in RVs</h2>
                     <p>April 2018</p>
