background- new color?

--- a/aboutme.html
+++ b/aboutme.html
@@ -33,11 +33,10 @@
             service Eikon and helped lead a team at a media startup. Outside of all things news, I <strong>LOVE</strong>
             cooking —I make my own cheese, breads—the whole deal. I'm also a newbie plant mom🪴!! </p>
 
-        <p class="aboutme-p-font">I'm interested in covering climate justice, big tech and the intersection of the two
+        <p class="aboutme-p-font">I'm interested in covering <mark>climate justice</mark>, <mark>big tech</mark> and the intersection of the two
             using data. </p>
         <p class="aboutme-p-font">
-            I also write a <a href="https://areena.substack.com/" target="_blank">weekly newsletter,</a> work part-time
-            and I'm pursuing a master's degree in Data Journalism from <span style="color: #000d74">Columbia University.</span> And, I'm <b>always</b> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨
+            I also write a <a href="https://areena.substack.com/" target="_blank">weekly newsletter,</a> and I'm pursuing a master's degree in <strong>Data Journalism</strong> from <span style="color: #000d74">Columbia University.</span> And, I'm <b>always</b> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨
         </p>
         <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi
             <br>
