--- a/new_index.html
+++ b/new_index.html
@@ -16,8 +16,14 @@
             <i class="fas fa-home fa-2x" aria-hidden="true"></i>
         </a>
         &nbsp;
-        <a href="https://areenaarora.com/resume">
+        <a href="https://areenaarora.com/aboutme">
+            <!-- <i class="fa-solid fa-chalkboard-user fa-2x" aria-hidden="true"></i> -->
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
+            About Me
+        </a>
+        <a href="www.areenaarora.com/playground" 
+        <i class="fa-solid fa-otter"></i>
+        Playground
         </a>
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
