--- a/new_index.html
+++ b/new_index.html
@@ -21,7 +21,7 @@
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
             About Me
         </a>
-        <a href="www.areenaarora.com/playground" 
+        <a href="https://areenaarora.com/playground" 
         <i class="fa-solid fa-otter"></i>
         Playground
         </a>
