--- a/new_index.html
+++ b/new_index.html
@@ -22,7 +22,7 @@
             About Me
         </a>
         <a href="https://areenaarora.com/playground">
-        <i class="fa-solid fa-otter fa-2x"></i>
+        <i class="fas fa-otter fa-2x"></i>
         Playground
         </a>
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
