I JUST CHANGED EVERYTHING TO MY COOL NEW CSS
:)))))))

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="new-stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
