--- a/aboutme.html
+++ b/aboutme.html
@@ -15,8 +15,14 @@
             <i class="fas fa-home fa-2x" aria-hidden="true"></i>
         </a>
         &nbsp;
-        <a href="https://areenaarora.com/resume">
+        <a href="https://areenaarora.com/aboutme">
+            <!-- <i class="fa-solid fa-chalkboard-user fa-2x" aria-hidden="true"></i> -->
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
+            About Me
+        </a>
+        <a href="https://areenaarora.com/playground">
+        <i class="fas fa-otter fa-2x"></i>
+        Playground
         </a>
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
@@ -24,7 +30,6 @@
         <a href='https://github.com/areenaarora' target='blank' class="right-nav">
             <i class="fab fa-github fa-2x"></i>
         </a>
-        <br><br><br>
     </nav>
     <div class="aboutme-div">
         <p class="aboutme-p-font">
@@ -42,6 +47,6 @@
             <b>Programming skills:</b>
             Python [Pandas, Beautiful Soup, Selenium], Regex, CSS, Excel
         </p>
-
+<a href="Areena Arora_Resume.pdf"> Download my resume! </a>
     </div>
 </body>
