--- a/playground.html
+++ b/playground.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
