--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
@@ -47,6 +48,6 @@
             <b>Programming skills:</b>
             Python [Pandas, Beautiful Soup, Selenium], Regex, CSS, Excel
         </p>
-<a href="Areena Arora_Resume.pdf"> Download my resume! </a>
+<a href="Areena Arora_Resume.pdf">Download my resume!</a>
     </div>
 </body>
