Space in nav bar

--- a/aboutme.html
+++ b/aboutme.html
@@ -21,6 +21,7 @@
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
             About Me
         </a>
+        &nbsp;
         <a href="https://areenaarora.com/playground">
         <i class="fas fa-otter fa-2x"></i>
         Playground
@@ -28,6 +29,7 @@
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
         </a>
+        &nbsp;
         <a href='https://github.com/areenaarora' target='blank' class="right-nav">
             <i class="fab fa-github fa-2x"></i>
         </a>
