--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
             About Me
         </a>
+        &nbsp;
         <a href="https://areenaarora.com/playground">
         <i class="fas fa-otter fa-2x"></i>
         Playground
@@ -29,6 +30,7 @@
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
         </a>
+        &nbsp;
         <a href='https://github.com/areenaarora' target='blank' class="right-nav">
             <i class="fab fa-github fa-2x"></i>
         </a>
