--- a/playground.html
+++ b/playground.html
@@ -20,9 +20,11 @@
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
             About Me
         </a>
+        &nbsp;
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
         </a>
+        &nbsp;
         <a href='https://github.com/areenaarora' target='blank' class="right-nav">
             <i class="fab fa-github fa-2x"></i>
         </a>
