--- a/aboutme.html
+++ b/aboutme.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="favicon.png">
@@ -17,8 +18,8 @@
         </a>
         &nbsp;
         <a href="https://areenaarora.com/playground">
-        <i class="fas fa-otter fa-2x"></i>
-        Playground
+            <i class="fas fa-otter fa-2x"></i>
+            Playground
         </a>
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
@@ -34,16 +35,33 @@
             service Eikon and helped lead a team at a media startup. Outside of all things news, I <strong>LOVE</strong>
             cooking —I make my own cheese, breads—the whole deal. I'm also a newbie plant mom🪴!! </p>
 
-        <p class="aboutme-p-font">I'm interested in covering <mark>climate justice</mark>, <mark>big tech</mark> and the intersection of the two
+        <p class="aboutme-p-font">I'm interested in covering <mark>climate justice</mark>, <mark>big tech</mark> and the
+            intersection of the two
             using data. </p>
         <p class="aboutme-p-font">
-            I also write a <a href="https://areena.substack.com/" target="_blank">weekly newsletter,</a> and I'm pursuing a master's degree in <strong>Data Journalism</strong> from <span style="color: #000d74">Columbia University.</span> And, I'm <b>always</b> up for good conversations over a cup of ✨<span class='blink-text'>chai!</span>✨
+            I also write a <a href="https://areena.substack.com/" target="_blank">weekly newsletter,</a> and I'm
+            pursuing a master's degree in <strong>Data Journalism</strong> from <span style="color: #000d74">Columbia
+                University.</span> And, I'm <b>always</b> up for good conversations over a cup of ✨<span
+                class='blink-text'>chai!</span>✨
         </p>
         <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi
             <br>
             <b>Programming skills:</b>
             Python [Pandas, Beautiful Soup, Selenium], Regex, CSS, Excel
         </p>
-<a href="Areena Arora_Resume.pdf">Download my resume!</a>
+        <br>
+        <div>
+            <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume!</a>
+            <div class="aboutme-buttons">
+                <!-- Calendly link widget begin -->
+                <!-- Calendly link widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/areena-arora?text_color=ffffff&primary_color=ffffff'});return false;">Let&#39;s schedule a chat!</a>
+<!-- Calendly link widget end -->
+                <!-- Calendly link widget end -->
+            </div>
+        </div>
     </div>
+
 </body>
