--- a/aboutme.html
+++ b/aboutme.html
@@ -52,15 +52,8 @@
         <br>
         <div>
             <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume!</a>
-            <div class="aboutme-buttons">
-                <!-- Calendly link widget begin -->
-                <!-- Calendly link widget begin -->
-<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/areena-arora?text_color=ffffff&primary_color=ffffff'});return false;">Let&#39;s schedule a chat!</a>
-<!-- Calendly link widget end -->
-                <!-- Calendly link widget end -->
-            </div>
+            <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank"> "Let's schedule a
+                chat!"
         </div>
     </div>
 
