--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,6 +57,7 @@
             <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume!</a>
             <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank"> "Let's schedule a
                 chat!"
+                </a>
         </div>
     </div>
 
