--- a/aboutme.html
+++ b/aboutme.html
@@ -38,7 +38,7 @@
             service Eikon and helped lead a team at a media startup. Outside of all things news, I <strong>LOVE</strong>
             cooking —I make my own cheese, breads—the whole deal. I'm also a newbie plant mom🪴!! </p>
 
-        <p class="aboutme-p-font">I'm interested in covering <mark>climate justice</mark>, <mark>big tech</mark> and the
+        <p class="aboutme-p-font">I'm interested in covering <mark> <span style="background-color:#DFFF00">climate justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark> and the
             intersection of the two
             using data. </p>
         <p class="aboutme-p-font">
@@ -54,10 +54,11 @@
         </p>
         <br>
         <div>
-            <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume!</a>
-            <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank"> "Let's schedule a
-                chat!"
-                </a>
+            <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank">Let's schedule a chat</a>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <a class="aboutme-buttons" href="https://areena.substack.com/" target="_blank">Subscribe to my newsletter :)</a>
         </div>
     </div>
 
