--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,8 +27,8 @@
         </a>
         &nbsp;
         <a href="https://areenaarora.com/playground">
-        <i class="fas fa-otter fa-2x"></i>
-        Playground
+            <i class="fas fa-otter fa-2x"></i>
+            Playground
         </a>
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
@@ -84,6 +84,11 @@
                 </div>
             </div>
         </a>
+    </div>
+    <br><br><br>
+    <button>Reporting+Writing</button>
+    <br><br>
+    <div class="cards-wrapper">
         <a href='https://www.idahopress.com/news/local/2cscoop/indian-creek-plaza-over-budget-and-behind-original-construction-schedule/article_729c087a-780c-5202-bacf-34255edb016d.html'
             target="_blank">
             <div class="story-card">
