--- a/playground.html
+++ b/playground.html
@@ -37,7 +37,8 @@
     </h1>
 
     <h4> Rules </h4>
-    <p class="p-playground"> This is a catalogue of my ongoing projects + things I find interesting. If you see more than two projects I'm currently working on, <mark><a href="mailto:areena.arora@gmail.com", target="_blank">yell at me, please!</a></mark>
-    </p>
+    <p class="p-playground"> This is a catalogue of my ongoing projects + things I find interesting. If you see more than two projects I'm currently working on, <mark><a href="mailto:areena.arora@gmail.com", target="_blank">yell at me, please!</a></mark></p>
+    <br>
+    <p class="p-playground">Coming soon: Ongoing data projects + interesting articles/podcasts/book reviews🌐</p>
 
 
