--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
         <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
             <i class="fab fa-twitter fa-2x"></i>
         </a>
-        &nbsp;
+        &nbsp;&nbsp;
         <a href='https://github.com/areenaarora' target='blank' class="right-nav">
             <i class="fab fa-github fa-2x"></i>
         </a>
