--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 <body>
     <nav>
-        <a href="https://areenaarora.com">
+        <!-- <a href="https://areenaarora.com">
             <i class="fas fa-home fa-2x" aria-hidden="true"></i>
         </a>
-        &nbsp;
+        &nbsp; -->
         <a href="https://areenaarora.com/aboutme">
             <!-- <i class="fa-solid fa-chalkboard-user fa-2x" aria-hidden="true"></i> -->
             <i class="fas fa-book fa-2x" aria-hidden="true"></i>
