--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </a>
         <a href="https://areenaarora.com/biryani-project" target="_blank">
             <div class="story-card">
-                <img src="biryani-new.jpg" alt="Biryani" style="width:100%">
+                <img src="stories/biryani/biryani-new.jpg" alt="Biryani" style="width:100%">
                 <div class="story-card-container">
                     <h2>Where's India's best and cheapest Biryani?</h2>
                     <p>February 2022</p>
