--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </a>
-        <a href="https://areenaarora.com/biryani-project" target="_blank">
+        <a href="stories/biryani/biryani-project.html" target="_blank">
             <div class="story-card">
                 <img src="stories/biryani/biryani-new.jpg" alt="Biryani" style="width:100%">
                 <div class="story-card-container">
