--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <button>Data+Viz</button>
     <br><br>
     <div class="cards-wrapper">
-        <a href="https://areenaarora.com/new-york-state-spills" target="_blank">
+        <a href="stories/ny-state-spills/new-york-state-spills.html" target="_blank">
             <div class="story-card">
                 <img src="card-photos/oil-spill.jpg" alt="Oil spill" style="width:100%">
                 <div class="story-card-container">
