--- a/stories/biryani/biryani-project.html
+++ b/stories/biryani/biryani-project.html
@@ -9,7 +9,7 @@
 </head>
 
 <body style='background-color: #FBFCFC; padding:40px;'>
-    <div style="max-width: 65%; margin: 0 auto;">
+    <div style="max-width: 605px; margin: 0 auto;">
         <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
             <ul>
                 <li>
