--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         Areena Arora
     </h1>
     <h4>
-        I'm a <span class=blink>data journalist.</span> Here's some of my selected work! :)
+        I'm a <span class=blink>data journalist.</span> Here's some of my recent work! :)
     </h4>
     <br><br>
     <button>Data+Viz</button>
