--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </a>
-        <a href='https://github.com/areenaarora/areenaarora.com' target="_blank">
+        <a href='https://areena.substack.com/p/building-my-first-website-from-framework?utm_source=url' target="_blank">
             <div class="story-card">
                 <img src="card-photos/idea.jpg" alt="idea" style="width:100%">
                 <div class="story-card-container">
