--- a/aboutme.html
+++ b/aboutme.html
@@ -41,9 +41,8 @@
         <p class="aboutme-p-font">I'm interested in covering <mark> <span style="background-color:#DFFF00">climate justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark> and the
             intersection of the two using <mark><span style="background-color:#E0B0FF">data</span></mark>.</p>
         <p class="aboutme-p-font">
-            I also write a <a href="https://areena.substack.com/" target="_blank">weekly newsletter,</a> and I'm
-            pursuing a master's degree in <strong>Data Journalism</strong> from <span style="color: #000d74">Columbia
-                University.</span> And, I'm <b>always</b> up for good conversations over a cup of ✨<span
+            I'm pursuing a master's degree in <strong>Data Journalism</strong> from <span style="color: #000d74">Columbia
+                University.</span>I write a <a href="https://areena.substack.com/" target="_blank">weekly newsletter,</a> and I'm <b>always</b> up for good conversations over a cup of ✨<span
                 class='blink-text'>chai!</span>✨
         </p>
         <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi
