--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
 </head>
-<title>Home</title>
+<title>Home|Areena Arora</title>
 <body>
     <nav>
         <!-- <a href="https://areenaarora.com">
