--- a/stories/biryani/biryani-project.html
+++ b/stories/biryani/biryani-project.html
@@ -2,7 +2,7 @@
 
 <head>
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="sunflower.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="icon" href="icon.png">
