--- a/aboutme.html
+++ b/aboutme.html
@@ -48,8 +48,8 @@
         </p>
         <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi
             <br>
-            <b>Programming skills:</b>
-            Python [Pandas, Beautiful Soup, Selenium], Regex, CSS, Excel
+            <b>Data analysis & visualization skills:</b>
+            Python [Pandas, Beautiful Soup, Selenium], Regex, Adobe Illustrator, QGIS, Datawrapper, CSS, Excel
         </p>
         <br>
         <div>
