--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@
 
 <body>
     <nav>
-            <a href="https://areenaarora.com">
-                <i class="fas fa-home fa-2x" aria-hidden="true"></i>
-            </a>
-            &nbsp;
+        <a href="https://areenaarora.com">
+            <i class="fas fa-home fa-2x" aria-hidden="true"></i>
+        </a>
+        &nbsp;
         &nbsp;
         <a href="https://areenaarora.com/playground">
             <i class="fas fa-otter fa-2x"></i>
@@ -39,25 +39,30 @@
             service Eikon and helped lead a team at a media startup. Outside of all things news, I <strong>LOVE</strong>
             cooking —I make my own cheese, breads—the whole deal. I'm also a newbie plant mom🪴 :)</p>
 
-        <p class="aboutme-p-font">I'm interested in covering <mark> <span style="background-color:#DFFF00">climate justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark> and the
+        <p class="aboutme-p-font">I'm interested in covering <mark> <span style="background-color:#DFFF00">climate
+                    justice</span></mark>, <mark> <span style="background-color:#7DF9FF">big tech</span></mark> and the
             intersection of the two using <mark><span style="background-color:#E0B0FF">data</span></mark>.</p>
         <p class="aboutme-p-font">
-            I'm pursuing a master's degree in <strong>Data Journalism</strong> from <span style="color: #000d74">Columbia
-                University.</span>I write a <a href="https://areena.substack.com/" target="_blank">weekly newsletter,</a> and I'm <b>always</b> up for good conversations over a cup of ✨<span
+            I'm pursuing a master's degree in <strong>Data Journalism</strong> from <span
+                style="color: #000d74">Columbia
+                University.</span>I write a <a href="https://areena.substack.com/" target="_blank">weekly
+                newsletter,</a> and I'm <b>always</b> up for good conversations over a cup of ✨<span
                 class='blink-text'>chai!</span>✨
         </p>
-        <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi
-            <br>
-            <b>Data analysis & visualization skills:</b>
-            Python [Pandas, Beautiful Soup, Selenium], Regex, Adobe Illustrator, QGIS, Datawrapper, CSS, Excel
+        <p class="aboutme-p-font">
+            <b>Data analysis:</b> Python [Pandas, Beautiful Soup, Selenium], Regex, Excel
         </p>
+        <p class="aboutme-p-font"> <b>Visualization:</b> Adobe Illustrator, QGIS, Datawrapper, CSS </p>
+        <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi </p>
         <br>
         <div>
             <a class="aboutme-buttons" href="Areena Arora_Resume.pdf" target="_blank">Download my resume</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank">Let's schedule a chat</a>
+            <a class="aboutme-buttons" href="https://calendly.com/areena-arora" target="_blank">Let's schedule a
+                chat</a>
             &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="aboutme-buttons" href="https://areena.substack.com/" target="_blank">Subscribe to my newsletter :)</a>
+            <a class="aboutme-buttons" href="https://areena.substack.com/" target="_blank">Subscribe to my newsletter
+                :)</a>
         </div>
     </div>
 
