--- a/aboutme.html
+++ b/aboutme.html
@@ -50,7 +50,7 @@
                 class='blink-text'>chai!</span>✨
         </p>
         <p class="aboutme-p-font">
-            <b>Data analysis:</b> Python [Pandas, Beautiful Soup, Selenium], Regex, Excel
+            <b>Data analysis:</b> Python [Pandas, Beautiful Soup, Selenium], Regex, SQL, Excel
         </p>
         <p class="aboutme-p-font"> <b>Visualization:</b> Adobe Illustrator, QGIS, Datawrapper, CSS </p>
         <p class="aboutme-p-font"> <b>Languages:</b> Hindi, Punjabi </p>
