Updated nav bars

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
 </head>
 <title>Areena Arora</title>
+
 <body>
     <nav>
         <!-- <a href="https://areenaarora.com">
@@ -67,7 +68,7 @@
                 </div>
             </div>
         </a>
-        <a href="https://github.com/areenaarora/scraping-newsroom-style-guides" target="_blank">
+        <a href="stories/style-guides/Style-Guides.html" target="_blank">
             <div class="story-card">
                 <img src="card-photos/editor.jpg" alt="editor image" style="width:100%">
                 <div class="story-card-container">
