--- a/stories/biryani/biryani-project.html
+++ b/stories/biryani/biryani-project.html
@@ -12,25 +12,30 @@
 
 <body style='background-color: #FBFCFC; padding:40px;'>
     <div style="max-width: 900px; margin: 0 auto;">
-        <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
-            <ul>
-                <li>
-                    <a href="https://areenaarora.com">
-                        <span class="icon is-small;">
-                            <i class="fas fa-home" aria-hidden="true"></i>
-                        </span>
-                        <span>Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://areenaarora.com/resume">
-                        <span class="icon is-small has-text-black">
-                            <i class="fas fa-book" aria-hidden="true"></i>
-                        </span>
-                        <span style="color:black">Resume</span>
-                    </a>
-                </li>
-            </ul>
+        <nav>
+            <a href="https://areenaarora.com">
+                <i class="fas fa-home fa-2x" aria-hidden="true"></i>
+            </a>
+            &nbsp;
+            &nbsp;
+            <a href="https://areenaarora.com/aboutme">
+                <!-- <i class="fa-solid fa-chalkboard-user fa-2x" aria-hidden="true"></i> -->
+                <i class="fas fa-book fa-2x" aria-hidden="true"></i>
+                About Me
+            </a>
+            &nbsp;
+            &nbsp;
+            <a href="https://areenaarora.com/playground">
+                <i class="fas fa-otter fa-2x"></i>
+                Playground
+            </a>
+            <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
+                <i class="fab fa-twitter fa-2x"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a href='https://github.com/areenaarora' target='blank' class="right-nav">
+                <i class="fab fa-github fa-2x"></i>
+            </a>
         </nav>
         <br><br>
         <!-- <img style="display: block;" src="https://live.staticflickr.com/5061/5642121703_26f96c06c2_b.jpg" alt="Chicken Biryani"><a href="https://www.flickr.com/photos/37643801@N06/5642121703">"Chicken Biryani"</a><span> by <a href="https://www.flickr.com/photos/37643801@N06">Asif A. Ali</a></span> is licensed under <a href="undefined?ref=openverse&atype=html" style="margin-right: 5px;"></a><a href="undefined?ref=openverse&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=47e18ffa-8662-44a3-baa8-c6a8a692ab4c" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nd_icon.svg" /></a></p> -->
@@ -43,12 +48,16 @@
         argue if the vegetable version even qualifies as Biryani — we’ll save that debate for another day!
         <br><br>
         But, which city has the best Biryani? I came up with a data-driven solution to settle one of the country’s
-        biggest divides! Using <a href="https://www.zomato.com/" target="_blank">Zomato</a>, I scraped information on restaurants that deliver Biryani in six cities: Delhi, Mumbai, Hyderabad, Lucknow, Kolkata and Bangalore. While I think only Hyderabad, Lucknow and Kolkata
+        biggest divides! Using <a href="https://www.zomato.com/" target="_blank">Zomato</a>, I scraped information on
+        restaurants that deliver Biryani in six cities: Delhi, Mumbai, Hyderabad, Lucknow, Kolkata and Bangalore. While
+        I think only Hyderabad, Lucknow and Kolkata
         qualify for the race, I figured I’d give the other three a chance too.
         <br><br>
-        If you're unfamiliar, Biryani is a meat and rice dish with different versions that originated in different Indian cities.
+        If you're unfamiliar, Biryani is a meat and rice dish with different versions that originated in different
+        Indian cities.
         <br> <br>
-        For the project, I scraped user ratings and price ranges. Note that this dataset has a few flaws I want to mention upfront.
+        For the project, I scraped user ratings and price ranges. Note that this dataset has a few flaws I want to
+        mention upfront.
         First, it is a database of 544 restaurants listed on Zomato, which I'm assuming to be fairly representative,
         owing to the fact that Zomato serves over 32 million users each month, according to an Economic Times report.
         <br><br>
@@ -71,7 +80,8 @@
         was a Zomato users-only opinion, but, the rating checks out from their Google reviews as well. I dove deep into
         their reviews and looks like people love them!
         <br><br>
-        On the other side, Delhi-NCR has some of the swankiest options, with restaurants selling servings for one for ₹500 or $7.
+        On the other side, Delhi-NCR has some of the swankiest options, with restaurants selling servings for one for
+        ₹500 or $7.
         <br><br>
         Hyderabad has the most places — 48 — rated over 4, followed by Mumbai with 38 places.
         <br><br>
@@ -93,7 +103,8 @@
             <br> -->
         Lucknow, Hyderabad and Kolkata each have distinctive Biryani styles. Hyderabadi is a tad spicier, served with a
         side of a punchy chili sauce (Mirchi ka Salan), Lucknowi is more fragrant and milder (also my favorite!) and
-        Kolkata's is like a warm comforting hug complete with boiled eggs and potatoes! And if you're wondering how I make Biryani, here's one of my many recipes!
+        Kolkata's is like a warm comforting hug complete with boiled eggs and potatoes! And if you're wondering how I
+        make Biryani, here's one of my many recipes!
         <br>
         <br>
         <div align="center" <blockquote class="instagram-media" data-instgrm-captioned
@@ -183,7 +194,8 @@
                     style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;">
                     <a href="https://www.instagram.com/p/CLzVzq1nqKk/?utm_source=ig_embed&amp;utm_campaign=loading"
                         style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none;"
-                        target="_blank">A post shared by Areena Arora (@feelin_gredient)</a></p>
+                        target="_blank">A post shared by Areena Arora (@feelin_gredient)</a>
+                </p>
             </div>
             </blockquote>
             <script async src="https://instagram.com/static/bundles/es6/EmbedSDK.js/47c7ec92d91e.js"></script>
