--- a/stories/ny-state-spills/index.html
+++ b/stories/ny-state-spills/index.html
@@ -15,25 +15,30 @@
         style="width:100vw; height:60vh; margin-left:-40px; margin-right: -40px; margin-top: -40px; margin-bottom: 20px; max-width: 100vw; object-fit: cover;"
         alt="Generic image of New York" />
     <div style="max-width: 900px; margin: 0 auto;">
-        <nav class="breadcrumb is-right has-bullet-separator" aria-label="breadcrumbs">
-            <ul>
-                <li>
-                    <a href="https://areenaarora.com">
-                        <span class="icon is-small;">
-                            <i class="fas fa-home" aria-hidden="true"></i>
-                        </span>
-                        <span>Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://areenaarora.com/resume">
-                        <span class="icon is-small has-text-black">
-                            <i class="fas fa-book" aria-hidden="true"></i>
-                        </span>
-                        <span style="color:black">Resume</span>
-                    </a>
-                </li>
-            </ul>
+        <nav>
+            <a href="https://areenaarora.com">
+                <i class="fas fa-home fa-2x" aria-hidden="true"></i>
+            </a>
+            &nbsp;
+            &nbsp;
+            <a href="https://areenaarora.com/aboutme">
+                <!-- <i class="fa-solid fa-chalkboard-user fa-2x" aria-hidden="true"></i> -->
+                <i class="fas fa-book fa-2x" aria-hidden="true"></i>
+                About Me
+            </a>
+            &nbsp;
+            &nbsp;
+            <a href="https://areenaarora.com/playground">
+                <i class="fas fa-otter fa-2x"></i>
+                Playground
+            </a>
+            <a href='https://twitter.com/AreenaArora' target='blank' class="right-nav">
+                <i class="fab fa-twitter fa-2x"></i>
+            </a>
+            &nbsp;&nbsp;
+            <a href='https://github.com/areenaarora' target='blank' class="right-nav">
+                <i class="fab fa-github fa-2x"></i>
+            </a>
         </nav>
         <br>
         <p style="font-size: 25px; color: rgb(0, 0, 0); font-weight: bold; text-align: left">Westchester reports most
@@ -131,4 +136,5 @@
         <br><br>
         <p style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:16px; color:darkslateblue">
             <i>This is an ongoing project and the data and code can be found <a
-                    href="https://github.com/areenaarora/ny-spills" target="_blank">here.</a></i></p>
+                    href="https://github.com/areenaarora/ny-spills" target="_blank">here.</a></i>
+        </p>
