Cleaned up pages

--- a/stories/biryani/biryani-project.html
+++ b/stories/biryani/biryani-project.html
@@ -1,12 +1,16 @@
 <html>
 
 <head>
-    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="sunflower.png">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="icon" href="icon.png">
-    <link rel="stylesheet" href="stylesheet-light.css">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="sunflower.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>Best Biryani</title>
 </head>
 
@@ -38,9 +42,6 @@
             </a>
         </nav>
         <br><br>
-        <!-- <img style="display: block;" src="https://live.staticflickr.com/5061/5642121703_26f96c06c2_b.jpg" alt="Chicken Biryani"><a href="https://www.flickr.com/photos/37643801@N06/5642121703">"Chicken Biryani"</a><span> by <a href="https://www.flickr.com/photos/37643801@N06">Asif A. Ali</a></span> is licensed under <a href="undefined?ref=openverse&atype=html" style="margin-right: 5px;"></a><a href="undefined?ref=openverse&atype=html" target="_blank" rel="noopener noreferrer" style="display: inline-block;white-space: none;margin-top: 2px;margin-left: 3px;height: 22px !important;"><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc_icon.svg?image_id=47e18ffa-8662-44a3-baa8-c6a8a692ab4c" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-by_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nc_icon.svg" /><img style="height: inherit;margin-right: 3px;display: inline-block;" src="https://search.creativecommons.org/static/img/cc-nd_icon.svg" /></a></p> -->
-        <img src="biryani-new.jpg">
-        <br><br>
         <p style="font-size: 28px; color: black; font-weight: bold; text-align: center;">
             Where's the best Biryani at?</p>
         <br>
@@ -56,6 +57,8 @@
         If you're unfamiliar, Biryani is a meat and rice dish with different versions that originated in different
         Indian cities.
         <br> <br>
+        <img src="biryani-new.jpg" style="width:500px;height:400px; align: right;">
+        <br><br>
         For the project, I scraped user ratings and price ranges. Note that this dataset has a few flaws I want to
         mention upfront.
         First, it is a database of 544 restaurants listed on Zomato, which I'm assuming to be fairly representative,
@@ -201,8 +204,8 @@
             <script async src="https://instagram.com/static/bundles/es6/EmbedSDK.js/47c7ec92d91e.js"></script>
         </div>
         <br><br>
-        My code for this analysis can be found <a href="https://github.com/areenaarora/street-food-bluru"
-            target="_blank">here!</a>
+        <strong>My code for this analysis can be found <a href="https://github.com/areenaarora/street-food-bluru"
+            target="_blank"><mark>here!</mark></a></strong>
     </div>
 
 </html>
