--- a/stories/ny-state-spills/index.html
+++ b/stories/ny-state-spills/index.html
@@ -1,12 +1,16 @@
 <html>
 
 <head>
-    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" href="sunflower.png">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="icon" href="icon.png">
-    <link rel="stylesheet" href="stylesheet-light.css">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" type="image/x-icon" href="sunflower.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
     <title>New York State spills</title>
 </head>
 
