--- a/Style-Guides.html
+++ b/Style-Guides.html
@@ -50,7 +50,7 @@
             conversation around police brutality was brought to center stage.
             Something changed in newsrooms.
         </p>
-        <p class="aboutme-p-font"></p>>Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia
+        <p class="aboutme-p-font">Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia
         Journalism Review responded by announcing that they’ve updated their style guides to capitalize the world
         “Black”</p>
         <p class="aboutme-p-font">But, this isn’t new. And it’s not just the word “Black” that has been brought to
