--- a/stories/style-guides/Style-Guides.html
+++ b/stories/style-guides/Style-Guides.html
@@ -50,9 +50,9 @@
             conversation around police brutality was brought to center stage.
             Something changed in newsrooms.
         </p>
-        <p class="aboutme-p-font"></p>>Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia
-        Journalism Review responded by announcing that they’ve updated their style guides to capitalize the world
-        “Black”</p>
+        <p class="aboutme-p-font">Newsrooms across the country, from The New York Times to Atlantic, AP, Columbia
+            Journalism Review responded by announcing that they’ve updated their style guides to capitalize the world
+            “Black”</p>
         <p class="aboutme-p-font">But, this isn’t new. And it’s not just the word “Black” that has been brought to
             mainstream discussion. There’s more.</p>
         <p class="aboutme-p-font">Reuters refrains from using the word “terrorist” and advices using more “specific
