--- a/comparing-newsrooms-styleguides/index.html
+++ b/comparing-newsrooms-styleguides/index.html
@@ -5,8 +5,8 @@
 		<link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Comparing Newsrooms' Style Guides</title>
-		<script type="module" crossorigin src="/assets/index.8a7fa6e8.js"></script>
-		<link rel="stylesheet" href="/assets/index.762d25f5.css">
+		<script type="module" crossorigin src="./assets/index.8a7fa6e8.js"></script>
+		<link rel="stylesheet" href="./assets/index.762d25f5.css">
 	</head>
 	<body>
 		<div class="main-content">
