--- a/stories/style-guides/Style-Guides.html
+++ b/stories/style-guides/Style-Guides.html
@@ -80,4 +80,5 @@
         <p class="aboutme-p-font"><a
                 href="https://docs.google.com/presentation/d/1GGVP-Opkh9Qump65YmTkFFssOsy1uyWEKjcPYtPmEYU/edit?usp=sharing"
                 target=_blank">Here's a presentation I made on this project!</a></p>
+        <a class="aboutme-buttons" href="https://areenaarora.com/comparing-newsrooms-styleguides" target="_blank">Check the searchable database here!</a>
 </body>
