Doing things, let me be. please

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <!-- <link rel="icon" type="image/x-icon" href="favicon.png"> -->
     <link rel="icon" type="image/x-icon" href="sunflower.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
     <title>Areena Arora</title>
 </head>
 
@@ -50,7 +50,7 @@
     <button>Data+Viz</button>
     <br><br>
     <div class="cards-wrapper">
-        <a href="stories/ny-state-spills/index.html" target="_blank">
+        <a href="stories/ny-state-spills" target="_blank">
             <div class="story-card">
                 <img src="card-photos/oil-spill.jpg" alt="Oil spill" style="width:100%">
                 <div class="story-card-container">
@@ -59,7 +59,7 @@
                 </div>
             </div>
         </a>
-        <a href="stories/biryani/biryani-project.html" target="_blank">
+        <a href="stories/biryani" target="_blank">
             <div class="story-card">
                 <img src="stories/biryani/biryani-new.jpg" alt="Biryani" style="width:100%">
                 <div class="story-card-container">
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </a>
-        <a href="stories/style-guides/Style-Guides.html" target="_blank">
+        <a href="stories/style-guides" target="_blank">
             <div class="story-card">
                 <img src="card-photos/editor.jpg" alt="editor image" style="width:100%">
                 <div class="story-card-container">
