--- a/comparing-newsrooms-styleguides/index.html
+++ b/comparing-newsrooms-styleguides/index.html
@@ -7,6 +7,7 @@
 		<title>Comparing Newsrooms' Style Guides</title>
 		<script type="module" crossorigin src="./assets/index.8a7fa6e8.js"></script>
 		<link rel="stylesheet" href="./assets/index.762d25f5.css">
+		<script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
 	</head>
 	<body>
 		<div class="main-content">
