--- a/stories/style-guides/index.html
+++ b/stories/style-guides/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/efe58d4158.js" crossorigin="anonymous"></script>
+    <script defer data-domain="areenaarora.com" src="https://plausible.io/js/plausible.js"></script>
 </head>
 <title>Style-Guides</title>
 
